--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    color: rgb(255, 0, 0);
+    color: rgb(255, 174, 0);
 }
 
 .block {
@@ -10,10 +10,10 @@ h1 {
     border-color: rgb(0, 0, 0);
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 10px;
+    padding-top: 15px;
     padding-bottom: 10px;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 
@@ -21,5 +21,14 @@ img {
     width: 50%;
     margin: auto;
     display: block;
+
+}
+h2{
+    background-color: aqua;
+    border-radius: 30px;
+    border-width: 3px ;
+    padding-left: 50px ;
+
+    p
 
 }
